@@ -12,6 +12,10 @@ New:
 
   - Support recent versions of collective.fontawesome
 
+Fix:
+
+  - Surround with quotes a jQuery selector to avoid errors
+    [ale-rt]
 
 3.5.3 (2014-09-29)
 ==================
